# Upgrad-assignment

./: .gitignore  README.md  netlify.toml  pyproject.toml  render.yaml  requirements.txt
backend/: main.py  models.py  schemas.py  store.py
backend/chat/: course_qa.py  extractor.py  heuristics.py  lead_templates.py  lead_trigger.py  linter.py  persona.py  planner.py  question_router.py  recommender.py  redaction.py  slots.py  summarizer.py
backend/leads/: store.py
backend/routes/: leads.py
backend/tests/: test_chat_handler_single_emission.py  test_compare.py  test_course_qa.py  test_course_qa_overview.py  test_course_qa_top10.py  test_coverage.py  test_extractor.py  test_extractor_dates.py  test_heuristics.py  test_intent.py  test_lead_trigger.py  test_leads_endpoint.py  test_linter.py  test_no_pii_in_prompts.py  test_persona.py  test_planner.py  test_planner_threshold.py  test_question_router.py  test_recommender.py  test_summarizer.py  test_template_rotation.py
data/: course_embeddings.index.json  course_embeddings.npy  courses.sqlite  coverage_report.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/scripts/: lint-style.cjs
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: CardCarousel.tsx  ChatWindow.tsx  CompareBar.tsx  ComparisonMessage.tsx  Composer.tsx  CourseCard.tsx  CourseChip.tsx  (+9 more)
scraper/: audit.py  detail.py  discover.py  enrich.py  load.py  migrate_programme_type.py  parse.py  run.py  seeds.py
scraper/tests/: test_discover.py  test_enrich.py  test_parse.py
(+2 files in other folders)
